Fix the problem with white space on the right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@ html,
 body {
   height: 100%;
   width: 100%;
+  margin:0px;
+  padding:0px;
+  overflow-x:hidden;
 }
 
 body {
@@ -16,6 +19,7 @@ body {
   margin: 0;
   padding: 0;
   border: none;
+  max-width:initial;
 }
 
 /*Styling the header*/
